chore: enable semantic release

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@telerik/kendo-intl",
   "description": "A package exporting functions for date and number parsing and formatting",
-  "version": "0.9.5",
+  "version": "0.0.0-semantically-released",
   "repository": {
     "type": "git",
     "url": "https://github.com/telerik/kendo-intl.git"
