--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_script:
 script:
   - npm run lint
   - npm run test
+  - npm run locale-tests
   - npm run build-package
 after_success:
   - npm run semantic-release
