--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,13 @@ before_install:
   - npm i -g npm@^3.8.0
   - export CHROME_BIN=/usr/bin/google-chrome
 before_script:
-  - "npm prune"
-  - "npm update"
-  - "export DISPLAY=:99.0"
-  - "export TZ='Europe/Sofia'"
-  - "sh -e /etc/init.d/xvfb start"
-  - "sleep 3" # give xvfb some time to start
+  - git fetch origin
+  - npm prune
+  - npm update
+  - export DISPLAY=:99.0
+  - export TZ='Europe/Sofia'
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
 script:
   - npm run lint
   - npm run test
