chore: cleanup package

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,13 @@
-docs
-test
-locale-tests
-src
-tmp
-gulpfile.js
-.npmignore
 .eslintrc.json
+.npmignore
 .travis.yml
-typings*
+/docs
+/examples
+/locale-tests
+/src
+/test
+CODEOWNERS.md
+CONTRIBUTING.md
+build-locales.js
+gulpfile.js
+tmp
