--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@telerik/eslint-config": "^1.0.0",
     "@progress/kendo-package-tasks": "^3.0.0",
-    "@telerik/semantic-prerelease": "^1.0.0",
+    "@telerik/semantic-prerelease": "^1.3.2",
     "cldr-data": "latest",
     "cz-conventional-changelog": "^1.1.5",
     "ghooks": "^1.0.3",
@@ -59,5 +59,9 @@
     "verifyConditions": "@telerik/semantic-prerelease/verifyConditions",
     "verifyRelease": "@telerik/semantic-prerelease/verifyRelease"
   },
-  "cldr-data-coverage": "full"
+  "cldr-data-coverage": "full",
+  "files": [
+    "dist",
+    "build-locales.js"
+  ]
 }
