chore: debug ssh auth

--- a/shippable.yml
+++ b/shippable.yml
@@ -39,5 +39,5 @@ jobs:
             - env
             - ssh-add $KENDOINTLREPO_KEYPATH
             - cd $KENDOINTLREPO_STATE && git checkout master && git pull --rebase
-            - ssh -T git@github.com
+            - ssh -T git@github.com -i $KENDOINTLREPO_KEYPATH -v
             - npm install @telerik/semantic-prerelease@1 --no-save && npx release-master
