--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "dependencies": {},
   "devDependencies": {
     "@telerik/eslint-config": "^1.0.0",
-    "@progress/kendo-package-tasks": "^3.0.19",
+    "@progress/kendo-package-tasks": "vinylfix",
     "@telerik/semantic-prerelease": "^1.3.3",
     "cldr-data": "latest",
     "cz-conventional-changelog": "^1.1.5",
     "ghooks": "^1.0.3",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.0",
     "semantic-release": "^6.3.6",
     "validate-commit-msg": "^1.1.1"
   },
