--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "es2015": "dist/es2015/main.js",
   "typings": "dist/npm/main.d.ts",
   "scripts": {
-    "build-package": "gulp build-rollup-package",
+    "build-package": "gulp build-rollup-package build-cdn",
     "test": "gulp test",
     "locale-tests": "gulp test --tests=\"locale-tests/generated-locales.js\"",
     "lint": "gulp lint",
@@ -23,7 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "@telerik/eslint-config": "^1.0.0",
-    "@progress/kendo-package-tasks": "^4.0.2",
+    "@progress/kendo-package-tasks": "cdn-bundle",
     "@telerik/semantic-prerelease": "^1.3.3",
     "cldr-data": "latest",
     "cz-conventional-changelog": "^1.1.5",
