--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "@progress/semantic-prerelease": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
-    "cldr-data": "latest",
+    "cldr-core": "^41.0.0",
+    "cldr-dates-full": "^41.0.0",
+    "cldr-localenames-full": "^41.0.0",
+    "cldr-misc-full": "^41.0.0",
+    "cldr-numbers-full": "^41.0.0",
+    "cldr-units-full": "^41.0.0",
     "cz-conventional-changelog": "^1.1.5",
     "eslint": "^8.16.0",
     "ghooks": "^1.0.3",
@@ -60,7 +65,6 @@
     "verifyConditions": "@progress/semantic-prerelease/verifyConditions",
     "verifyRelease": "@progress/semantic-prerelease/verifyRelease"
   },
-  "cldr-data-coverage": "full",
   "files": [
     "dist",
     "build-locales.js"
