--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "cldr-core": "^41.0.0",
+    "cldr-data": "^36.0.1",
     "cldr-dates-full": "^41.0.0",
     "cldr-localenames-full": "^41.0.0",
     "cldr-misc-full": "^41.0.0",
