--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,23 +21,18 @@ jobs:
         uses: LanceMcCarthy/akeyless-action@v3
         with:
           access-id: ${{ secrets.GH_AKEYLESS_ACCESS_ID }}
-          static-secrets: '{ "/WebComponents/prod/tokens/GH_TOKEN": "GH_TOKEN" }'
+          static-secrets: '{ "${{ secrets.GH_AKEYLESS_GH_TOKEN_PATH }}": "GH_TOKEN" }'
           export-secrets-to-environment: false
 
       - name: Check out master
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: master
           fetch-depth: 0 # Fetch all branches
           token: ${{ steps.import-secrets.outputs.GH_TOKEN }}
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: Install modules
-        run: npm install @progress/semantic-prerelease --no-save
-
       - name: Fast-forward master to develop
-        run: npx release-master
+        run: |
+          # TODO: Remove after first sync with master
+          git checkout origin/develop -- ./tools/release-master
+          ./tools/release-master
