--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "test:watch": "jest --watch -- ./test",
     "locale-tests": "jest -- ./locale-tests",
     "locale-tests:watch": "jest --watch -- ./locale-tests",
-    "lint": "eslint --quiet -- ./src ./test ./locale-tests/*.js"
+    "lint": "eslint --quiet -- ./src ./test ./locale-tests/*.js",
+    "prepare": "husky"
   },
   "keywords": [
     "Kendo",
     "Internationalization"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@progress/kendo-package-tasks": "dev",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
@@ -32,39 +35,31 @@
     "cldr-misc-full": "^41.0.0",
     "cldr-numbers-full": "^41.0.0",
     "cldr-units-full": "^41.0.0",
-    "cz-conventional-changelog": "^1.1.5",
     "es-jest": "^1.5.0",
     "eslint": "^8.16.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.5.3",
-    "ghooks": "^1.0.3",
     "gulp": "^4.0.0",
+    "husky": "^9.1.7",
     "jest-cli": "^26.6.3",
-    "semantic-release": "^24.2.1",
-    "validate-commit-msg": "^1.1.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    },
-    "ghooks": {
-      "pre-commit": "npm run lint",
-      "commit-msg": "validate-commit-msg"
-    }
+    "semantic-release": "^24.2.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/telerik/kendo-intl.git"
   },
   "release": {
-    "branches": [{
+    "branches": [
+      {
         "name": "master",
         "channel": "latest"
-    }, {
+      },
+      {
         "name": "develop",
         "prerelease": true,
         "channel": "dev"
-    }]
+      }
+    ]
   },
   "publishConfig": {
     "provenance": true
