chore: update eslint

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:watch": "jest --watch -- ./test",
     "locale-tests": "jest -- ./locale-tests",
     "locale-tests:watch": "jest --watch -- ./locale-tests",
-    "lint": "eslint --quiet -- ./src ./test ./locale-tests/*.js",
+    "lint": "eslint -- ./src ./test ./locale-tests/*.js",
     "prepare": "husky"
   },
   "keywords": [
@@ -26,8 +26,8 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@progress/kendo-package-tasks": "dev",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
     "cldr-core": "^41.0.0",
     "cldr-data": "^36.0.1",
     "cldr-dates-full": "^41.0.0",
@@ -36,9 +36,9 @@
     "cldr-numbers-full": "^41.0.0",
     "cldr-units-full": "^41.0.0",
     "es-jest": "^1.5.0",
-    "eslint": "^8.16.0",
+    "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jest": "^28.10.0",
     "gulp": "^4.0.0",
     "husky": "^9.1.7",
     "jest-cli": "^26.6.3",
