--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "typings": "dist/npm/main.d.ts",
   "scripts": {
     "build-package": "gulp build-rollup-package build-cdn",
-    "test": "jest -- ./test",
-    "test:watch": "jest --watch -- ./test",
-    "locale-tests": "jest -- ./locale-tests",
-    "locale-tests:watch": "jest --watch -- ./locale-tests",
+    "test": "vitest --run ./test/",
+    "test:watch": "vitest ./test/",
+    "locale-tests": "vitest --run ./locale-tests/",
+    "locale-tests:watch": "vitest ./locale-tests/",
     "lint": "eslint -- ./src ./test ./locale-tests/*.js",
     "prepare": "husky"
   },
@@ -35,14 +35,13 @@
     "cldr-misc-full": "^41.0.0",
     "cldr-numbers-full": "^41.0.0",
     "cldr-units-full": "^41.0.0",
-    "es-jest": "^1.5.0",
     "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^28.10.0",
     "gulp": "^4.0.0",
     "husky": "^9.1.7",
-    "jest-cli": "^26.6.3",
-    "semantic-release": "^24.2.1"
+    "semantic-release": "^24.2.1",
+    "vitest": "^2.1.8"
   },
   "repository": {
     "type": "git",
