--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@progress/kendo-package-tasks": "4.0.40",
+    "@progress/kendo-package-tasks": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "cldr-core": "^48.0.0",
@@ -38,7 +38,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^28.10.0",
-    "gulp": "^4.0.0",
+    "gulp": "^5.0.1",
     "husky": "^9.1.7",
     "vitest": "^4.0.16"
   },
