chore: build test locales before tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,7 @@ jobs:
         run: npm run test
 
       - name: Run locale tests
-        run: npm run locale-tests
+        run: |
+          npm run build-locales
+          npm run locale-tests
 
